--- a/adressbook.html
+++ b/adressbook.html
@@ -1,10 +1,65 @@
 <html>
-    <head>
-        <body>
-           <h1><b><i> Adress book</b></i></h1> 
-           <style>
-                body{ background-color: rgb(243, 141, 24)}
-            </style>
-        </body>
-    </head>
+
+<head>
+    <h1><b><i> Adress book</b></i></h1>
+    <script>
+        function myFilterFunction() {
+            var sSearchWord = document.getElementById("myFilterBox").value;
+            console.log(sSearchWord);
+
+
+            var input, filter, ul, li, a, i, txtValue;
+            input = document.getElementById('myFilterBox');
+            filter = input.value.toUpperCase();
+
+
+
+            ul = document.getElementById("myList");
+            li = ul.getElementsByTagName('li');
+
+            for (i = 0; i < li.length; i++)
+                txtValue = li[i].innerHTML;
+
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = "";
+            } else {
+                li[i].style.display = "none";
+            }
+        }
+}
+
+
+                }
+
+        function addperson() {
+            var node = document.createElement("LI");                // Create a <li> node
+            var sName = document.getElementById("myNewName").value;
+            var textnode = document.createTextNode(sName);         // Create a text node
+            node.appendChild(textnode);                              // Append the text to <li>
+            document.getElementById("myList").appendChild(node);     // Append <li> to <ul> with id="myList"
+
+
+        }
+
+    </script>
+
+<body>
+    <input id="myFilterBox" type="text" onkeyup="myFilterFunction();" placeholder="Filter...">
+    <input id="myNewName" type="text" placeholder="New... ">
+    <button onclick="addperson();">Add</button>
+    <ul id="myList">
+        <li>semhar</li>
+        <li>sema</li>
+        <li>melat</li>
+    </ul>
+
+
+    <style>
+        body {
+            background-color: rgb(243, 141, 24)
+        }
+    </style>
+</body>
+</head>
+
 </html>
