--- a/adressbook.html
+++ b/adressbook.html
@@ -3,33 +3,7 @@
 <head>
     <h1><b><i> Adress book</b></i></h1>
     <script>
-        function myFilterFunction() {
-            var sSearchWord = document.getElementById("myFilterBox").value;
-            console.log(sSearchWord);
 
-
-            var input, filter, ul, li, a, i, txtValue;
-            input = document.getElementById('myFilterBox');
-            filter = input.value.toUpperCase();
-
-
-
-            ul = document.getElementById("myList");
-            li = ul.getElementsByTagName('li');
-
-            for (i = 0; i < li.length; i++)
-                txtValue = li[i].innerHTML;
-
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                li[i].style.display = "";
-            } else {
-                li[i].style.display = "none";
-            }
-        }
-}
-
-
-                }
 
         function addperson() {
             var node = document.createElement("LI");                // Create a <li> node
@@ -40,6 +14,32 @@
 
 
         }
+        function myFilterFunction() {
+
+
+            var input, filter, ul, li, a, i, txtValue;
+            input = document.getElementById("myFilterBox");
+            filter = input.value.toUpperCase();
+
+
+
+            ul = document.getElementById("myList");
+            li = ul.getElementsByTagName('li');
+
+            for (i = 0; i < li.length; i++) {
+
+
+                txtValue = li[i].innerHTML;
+
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
+            
+
+            }
 
     </script>
 
